--- a/R/app/index.html
+++ b/R/app/index.html
@@ -1,4 +1,4 @@
-<iframe id="example1" src="https://jimrpy.shinyapps.io/shiny>"
+<iframe id="example1" src="https://jimrpy.shinyapps.io/shiny/">
 style="border: non; width: 100%; height: 500px"
 frameborder="0">
 </iframe>
