--- a/R/app/index.html
+++ b/R/app/index.html
@@ -1,4 +1,4 @@
 <iframe id="example1" src="https://jimrpy.shinyapps.io/shiny/">
-style="border: non; width: 100%; height: 1200px"
+style="border: non; width: 100%; height: 100%"
 frameborder="0">
 </iframe>
