--- a/R/app/index.html
+++ b/R/app/index.html
@@ -1,4 +1,7 @@
-<iframe id="example1" src="https://jimrpy.shinyapps.io/shiny/">
+<iframe id="example1" src="">
 style="border: non; width: 100%; height: 100%"
 frameborder="0">
 </iframe>
+
+
+https://jimrpy.shinyapps.io/shiny/
