--- a/R/app/index.html
+++ b/R/app/index.html
@@ -1,5 +1,13 @@
+<head>
+  <script>
+  function resizeIframe(obj) {
+    obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
+  }
+ </script>
+</head?
+
 <iframe id="example1" src="">
-style="border: non; width: 100%; height: 100%"
+style="border: non; width: 100%; height: 100%";
 frameborder="0">
 </iframe>
 
